--- a/core/templates/instalacion/todos.html
+++ b/core/templates/instalacion/todos.html
@@ -117,7 +117,7 @@
 				"pageLength": 5,
 				"language": {
                     "lengthMenu": "Mostrar _MENU_  registros por página",
-                    "zeroRecords": "No hay registros - disculpe",
+                    "zeroRecords": "No hay registros",
                     "info": "Pág. _PAGE_ de _PAGES_",
                     "infoEmpty": "No hay registros disponibles",
                     "infoFiltered": "(filtered from _MAX_ total records)",
