--- a/core/templates/layouts/base-form.html
+++ b/core/templates/layouts/base-form.html
@@ -1,8 +1,10 @@
 {% extends "layouts/base.html" %}
 {% block content %}
-    <div class="page-inner">
-        <div class="page-header">
-            <h4 class="page-title">{% block content-form-page-header-title %} {% endblock content-form-page-header-title %}</h4>
+    <div class="page-inner mx-2 mt-1 p-2">
+        <div class="page-header m-1 p-1">
+            <h5 class="page-title">
+                {% block content-form-page-header-title %} {% endblock content-form-page-header-title %}
+            </h5>
             {% block content-form-page-header %} {% endblock content-form-page-header %}
         </div>
         <div class="row">
