--- a/core/templates/cliente/todos.html
+++ b/core/templates/cliente/todos.html
@@ -29,31 +29,33 @@
 {% endblock content-form-page-header %}
 {% block content-form-form-tag-begin %} {% endblock content-form-form-tag-begin %}
 {% block content-form-content %}
-    <div class="card-header">
+    <div class="card-header m-0 p-2">
         <div class="d-flex align-items-center">
             <h4 class="card-title"></h4>
             <a href="/cliente/" role="button"
-               class="btn btn-primary btn-round ml-auto">
-                <i class="fa fa-plus" title="Agregar"></i>Agregar
+               class="btn btn-primary ml-auto">
+                <i class="fa fa-plus mr-2" title="Agregar"></i>Agregar
             </a>
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive w-100">
-            <table id="add-row" class="display table table-striped table-hover">
+        <div class="table-responsive m-0 p-0 py-3 w-100">
+            <!--table id="add-row" class="display table table-striped table-hover table-bordered table-head-bg-primary table-bordered-bd-primary"-->
+            <table id="add-row" class="display table table-striped table-hover table-head-bg-primary ">
                 <thead>
                 <tr>
+                    <th class="text-center"></th>
                     <th>NIF</th>
                     <th>Razón social</th>
                     <th>Dirección</th>
                     <th>Problación</th>
                     <th>Provincia</th>
-                    <th>Código Postal</th>
+                    <th>Código postal</th>
                     <th>Teléfono</th>
                     <th>Móvil</th>
                     <th>e-mail</th>
                     <th>Estado</th>
-                    <th class="w-10 text-center">Opciones</th>
+                    <th class="text-center"></th>
                 </tr>
                 </thead>
                 <!--tfoot>
@@ -63,7 +65,7 @@
                     <th>Dirección</th>
                     <th>Problación</th>
                     <th>Provincia</th>
-                    <th>Código Postal</th>
+                    <th>Código postal</th>
                     <th>Teléfono</th>
                     <th>Móvil</th>
                     <th>e-mail</th>
@@ -72,8 +74,20 @@
                 </tr>
                 </tfoot-->
                 <tbody>
-                {% for cliente in clientes %}
+                {% for cliente in form %}
                 <tr>
+                    <td>
+                        <div class="form-button-action m-0 p-0">
+                            <a href="/cliente/editar/{{ cliente.id }}" role="button"
+                               class="btn btn-link btn-primary btn-sm">
+                                <span class="fa fa-edit" title="Editar"></span>
+                            </a>
+                            <a href="/cliente/eliminar/{{ cliente.id }}" role="button"
+                               class="btn btn-link btn-danger btn-sm">
+                                <span class="fa fa-times" title="Eliminar"></span>
+                            </a>
+                        </div>
+                    </td>
                     <td>{{ cliente.nif }}</td>
                     <td>{{ cliente.razon_social }}</td>
                     <td>{{ cliente.direccion }}</td>
@@ -83,15 +97,19 @@
                     <td>{{ cliente.telefono }}</td>
                     <td>{{ cliente.movil }}</td>
                     <td>{{ cliente.email }}</td>
-                    <td class="text-center">{% if cliente.cliente_estado %}<i class="fa fa-check-square text-success"></i>{% else %}<i class="fa fa-times text-danger"></i>{% endif %}</td>
+                    <td class="text-center">
+                        {% if cliente.cliente_estado %}<i class="fa fa-check-square text-success"></i>
+                        {% else %}<i class="fa fa-times text-danger"></i>
+                        {% endif %}
+                    </td>
                     <td>
-                        <div class="form-button-action">
+                        <div class="form-button-action m-0 p-0">
                             <a href="/cliente/editar/{{ cliente.id }}" role="button"
-                               class="btn btn-link btn-primary btn-lg">
+                               class="btn btn-link btn-primary btn-sm">
                                 <span class="fa fa-edit" title="Editar"></span>
                             </a>
                             <a href="/cliente/eliminar/{{ cliente.id }}" role="button"
-                               class="btn btn-link btn-danger">
+                               class="btn btn-link btn-danger btn-sm">
                                 <span class="fa fa-times" title="Eliminar"></span>
                             </a>
                         </div>
@@ -109,42 +127,5 @@
 <!-- Specific JS goes HERE -->
 {% block javascripts %}{% endblock javascripts %}
 {% block javascripts-page %}
-	<script >
-		$(document).ready(function() {
-			$('#add-row').DataTable({
-				"pageLength": 5,
-				"language": {
-                    "lengthMenu": "Mostrar _MENU_  registros por página",
-                    "zeroRecords": "No hay registros",
-                    "info": "Pág. _PAGE_ de _PAGES_",
-                    "infoEmpty": "No hay registros disponibles",
-                    "infoFiltered": "(filtered from _MAX_ total records)",
-                    paginate: {
-                                    previous: 'Ant.',
-                                    next:     'Sig.'
-                                },
-                                aria: {
-                                    paginate: {
-                                        previous: 'Ant.',
-                                        next:     'Sig.'
-                                    }
-                                },
-                     "search": "Filtrado por: _INPUT_ ",
-                },
-			});
-
-			var action = '<td> <div class="form-button-action"> <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Editar"> <i class="fa fa-edit"></i> </button> <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-danger" data-original-title="Eliminar"> <i class="fa fa-times"></i> </button> </div> </td>';
-
-			$('#addRowButton').click(function() {
-				$('#add-row').dataTable().fnAddData([
-					$("#addName").val(),
-					$("#addPosition").val(),
-					$("#addOffice").val(),
-					action
-					]);
-				$('#addRowModal').modal('hide');
-
-			});
-		});
-	</script>
+    {% include 'includes/scripts_js_datatable.html' %}
 {% endblock javascripts-page %}
