--- a/core/templates/includes/navigation.html
+++ b/core/templates/includes/navigation.html
@@ -39,6 +39,7 @@
                 </form>
             </div-->
             <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                <!--div>
                 <li class="nav-item toggle-nav-search hidden-caret">
                     <a class="nav-link" data-toggle="collapse" href="#search-nav" role="button" aria-expanded="false"
                        aria-controls="search-nav">
@@ -229,6 +230,7 @@
                         </div>
                     </div>
                 </li>
+                </div-->
                 <li class="nav-item dropdown hidden-caret">
                     <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
                         <div class="avatar-sm">
@@ -246,18 +248,15 @@
                                             {{ request.user.user }}
                                         </h4>
                                         <p class="text-muted">
-                                            {{ request.user.email }}
+                                            {{ request.user.user }}
                                         </p>
-
                                         <a href="/cliente/" class="btn btn-xs btn-secondary btn-sm">Ver Perfíl</a>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/cliente/">Perfíl</a>
-                                <a class="dropdown-item" href="#">Balance</a>
-                                <a class="dropdown-item" href="#">Bandeja de Entrada</a>
+                                <a class="dropdown-item" href="/admin/password_change/">Cambiar clave</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href={% url 'logout' %}>Salir</a>
                             </li>
