--- a/core/templates/includes/sidenav.html
+++ b/core/templates/includes/sidenav.html
@@ -6,16 +6,16 @@
 				
 					{% if user.is_authenticated %}
 
-						<div class="user">
+						<!--div class="user">
 							<div class="avatar-sm float-left mr-2">
 								<img src="/static/assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
 							</div>
 							<div class="info">
 								<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 									<span>
-										{{ request.user.user }}
+										{{ request.user.user }}ooooo
 										<span class="user-level">
-											{{ request.user.email }}  
+											{{ request.user.email }} kkkkkkkkkkk
 										</span>
 										<span class="caret"></span>
 									</span>
@@ -30,6 +30,11 @@
 											</a>
 										</li>
 										<li>
+											<a href="/admin/password_change/">
+												<span class="link-collapse">Cambiar clave</span>
+											</a>
+										</li>
+										<li>
 											<a href={% url 'logout' %}>
 												<span class="link-collapse">Salir</span>
 											</a>
@@ -37,31 +42,68 @@
 									</ul>
 								</div>
 							</div>
-						</div>
+						</div-->
 
 						<ul class="nav nav-primary">
 							<li class="nav-item active">
 								<a data-toggle="collapse" href="#cliente" class="collapsed" aria-expanded="false">
-									<i class="fas fa-users"></i>
-									<p>Clientes</p>
+									<i class="fas fa-cog"></i>
+									<p>Configuración </p>
 									<span class="caret"></span>
 								</a>
 								<div class="collapse" id="cliente">
 									<ul class="nav nav-collapse">
 										<li class="nav-item m-0 p-0 h-75">
 											<a href="/cliente/todos">
-												<i class="fas fa-cog text-secondary"></i>
-												<span> Configurar </span>
-												<!--span class="fas fa-plus pull-right"></span-->
+												<i class="fas fa-users text-secondary"></i>
+												<span> Clientes </span>
 											</a>
 										</li>
-
+										<li class="nav-item m-0 p-0 h-75">
+											<a href="/instalacion/todos">
+												<i class="fas fa-map-marked-alt text-secondary"></i>
+												<span> Instalaciones </span>
+											</a>
+										</li>
+										<li class="nav-item m-0 p-0 h-75">
+											<a href="/camara_zona/todos">
+												<i class="fas fa-camera text-secondary"></i>
+												<span> Zonas Cámara </span>
+											</a>
+										</li>
+										<li class="nav-item m-0 p-0 h-75">
+											<a href="/monitor/todos">
+												<i class="fas fa-tv text-secondary"></i>
+												<span> Monitores </span>
+											</a>
+										</li>
+										<li class="nav-item submenu m-0 p-0 h-75">
+											<a data-toggle="collapse" href="#seguridad" class="" aria-expanded="true">
+												<i class="fas fa-user-lock text-secondary"></i>
+												<span>Seguridad</span>
+												<span class="caret"></span>
+											</a>
+											<div class="collapse show" id="seguridad" style="">
+												<ul class="nav nav-collapse">
+													<li>
+														<a href="/admin/auth/group/">
+															<span class="sub-item">Grupos</span>
+														</a>
+													</li>
+													<li>
+														<a href="/admin/auth/user/">
+															<span class="sub-item">Usuarios</span>
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
 									</ul>
 								</div>
 							</li>
 						</ul>
 
-						<ul class="nav nav-primary">
+						<!--ul class="nav nav-primary">
 							<li class="nav-item active">
 								<a data-toggle="collapse" href="#instalacion" class="collapsed" aria-expanded="false">
 									<i class="fas fa-map-marked-alt"></i>
@@ -74,7 +116,6 @@
 											<a href="/instalacion/todos">
 												<i class="fas fa-cog text-secondary"></i>
 												<span> Configurar </span>
-												<!--span class="fas fa-plus pull-right"></span-->
 											</a>
 										</li>
 										{% for menu_item in menu_instalaciones %}
@@ -87,7 +128,9 @@
 									</ul>
 								</div>
 							</li>
-						</ul>
+						</ul-->
+
+
 					{% endif %}	
 
 				</div>
