--- a/core/templates/instalacion/todos.html
+++ b/core/templates/instalacion/todos.html
@@ -5,7 +5,7 @@
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
 
-{% block content-form-page-header-title %} Instalación {% endblock content-form-page-header-title %}
+{% block content-form-page-header-title %} Instalaciones {% endblock content-form-page-header-title %}
 {% block content-form-page-header %}
     <ul class="breadcrumbs">
         <li class="nav-home">
@@ -23,130 +23,82 @@
             <i class="flaticon-right-arrow"></i>
         </li>
         <li class="nav-item">
-            <a href="#">Todos</a>
+            <a href="#">Todas</a>
         </li>
     </ul>
 {% endblock content-form-page-header %}
 {% block content-form-form-tag-begin %} {% endblock content-form-form-tag-begin %}
 {% block content-form-content %}
-    <div class="card-header">
+    <div class="card-header m-0 p-2">
         <div class="d-flex align-items-center">
             <h4 class="card-title"></h4>
             <a href="/instalacion/" role="button"
-               class="btn btn-primary btn-round ml-auto">
-                <i class="fa fa-plus" title="Agregar"></i>Agregar
+               class="btn btn-primary ml-auto">
+                <i class="fa fa-plus mr-2" title="Agregar"></i>Agregar
             </a>
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive w-100 m-0 p-0 pb-3">
-            <table id="add-row" class="display table table-striped table-hover">
-                <thead>
-                <tr>
-                    <th>Nombre Comercial</th>
-                    <th>Dirección</th>
-                    <th>Problación</th>
-                    <th>Provincia</th>
-                    <th>Código postal</th>
-                    <th>Conctacto</th>
-                    <th>Contacto cargo</th>
-                    <th>Contacto teléfono</th>
-                    <th>Contacto móvil</th>
-                    <th>Contacto e-mail</th>
-                    <th>Estado</th>
-                    <th class="w-10 text-center">Opciones</th>
-                </tr>
-                </thead>
-                <!--tfoot>
-                <tr>
-                    <th>Nombre Comercial</th>
-                    <th>Dirección</th>
-                    <th>Problación</th>
-                    <th>Provincia</th>
-                    <th>Código postal</th>
-                    <th>Conctacto</th>
-                    <th>Contacto cargo</th>
-                    <th>Contacto teléfono</th>
-                    <th>Contacto móvil</th>
-                    <th>Contacto e-mail</th>
-                    <th>Estado</th>
-                    <th></th>
-                </tr>
-                </tfoot-->
-                <tbody>
-                    {% for instalacion in instalaciones %}
+        <div class="table-responsive m-0 p-0 py-3 w-100">
+            <!--table id="add-row" class="display table table-striped table-hover table-bordered table-head-bg-primary table-bordered-bd-primary"-->
+            <div class="table-responsive w-100 m-0 p-0 pb-3">
+                <table id="add-row" class="display table table-striped table-hover">
+                    <thead>
                     <tr>
-                        <td>{{ instalacion.nombre_comercial }}</td>
-                        <td>{{ instalacion.direccion }}</td>
-                        <td>{{ instalacion.poblacion }}</td>
-                        <td>{{ instalacion.provincia }}</td>
-                        <td>{{ instalacion.codigo_postal }}</td>
-                        <td>{{ instalacion.contacto_nombre }}</td>
-                        <td>{{ instalacion.contacto_cargo }}</td>
-                        <td>{{ instalacion.contacto_telefono }}</td>
-                        <td>{{ instalacion.contacto_movil }}</td>
-                        <td>{{ instalacion.contacto_email }}</td>
-                        <td class="text-center">{% if instalacion.instalacion_estado %}<i class="fa fa-check-square text-success"></i>{% else %}<i class="fa fa-times text-danger"></i>{% endif %}</td>
-                        <td>
-                            <div class="form-button-action">
-                                <a href="/instalacion/editar/{{ instalacion.id }}" role="button"
-                                   class="btn btn-link btn-primary btn-lg">
-                                    <span class="fa fa-edit" title="Editar"></span>
-                                </a>
-                                <a href="/instalacion/eliminar/{{ instalacion.id }}" role="button"
-                                   class="btn btn-link btn-danger">
-                                    <span class="fa fa-times" title="Eliminar"></span>
-                                </a>
-                            </div>
-                        </td>
+                        <th>Razón social</th>
+                        <th>Nombre comercial</th>
+                        <th>Dirección</th>
+                        <th>Contacto</th>
+                        <th>Técnico</th>
+                        <th>Estado</th>
+                        <th class="w-10 text-center">Opciones</th>
                     </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <!--tfoot>
+                    <tr>
+                        <th>Razón social</th>
+                        <th>Nombre Comercial</th>
+                        <th>Dirección</th>
+                        <th>Contacto</th>
+                        <th>Técnico</th>
+                        <th>Estado</th>
+                        <th class="w-10 text-center">Opciones</th>
+                    </tr>
+                    </tfoot-->
+                    <tbody>
+                        {% for instalacion in instalaciones %}
+                        <tr>
+                            <td>{{ instalacion.id_cliente.nif }} - {{ instalacion.id_cliente.razon_social}}</td>
+                            <td>{{ instalacion.nombre_comercial }}</td>
+                            <td>{{ instalacion.direccion }} {{ instalacion.poblacion }}. {{ instalacion.provincia }}</td>
+                            <td>{{ instalacion.contacto_nombre }}</td>
+                            <td>{{ instalacion.tecnico_nombre }}</td>
+                            <td class="text-center">{% if instalacion.instalacion_estado %}<i class="fa fa-check-square text-success"></i>{% else %}<i class="fa fa-times text-danger"></i>{% endif %}</td>
+                            <td>
+                                <div class="form-button-action">
+                                    <a href="/instalacion/editar/{{ instalacion.id }}" role="button"
+                                       class="btn btn-link btn-primary btn-lg">
+                                        <span class="fa fa-edit" title="Editar"></span>
+                                    </a>
+                                    <a href="/instalacion/eliminar/{{ instalacion.id }}" role="button"
+                                       class="btn btn-link btn-danger">
+                                        <span class="fa fa-times" title="Eliminar"></span>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 {% endblock content-form-content %}
 {% block content-form-form-tag-end %} {% endblock content-form-form-tag-end %}
 
+
 <!-- Specific JS goes HERE -->
 {% block javascripts %}{% endblock javascripts %}
 {% block javascripts-page %}
-	<script >
-		$(document).ready(function() {
-			$('#add-row').DataTable({
-				"pageLength": 5,
-				"language": {
-                    "lengthMenu": "Mostrar _MENU_  registros por página",
-                    "zeroRecords": "No hay registros",
-                    "info": "Pág. _PAGE_ de _PAGES_",
-                    "infoEmpty": "No hay registros disponibles",
-                    "infoFiltered": "(filtered from _MAX_ total records)",
-                    paginate: {
-                                    previous: 'Ant.',
-                                    next:     'Sig.'
-                                },
-                                aria: {
-                                    paginate: {
-                                        previous: 'Ant.',
-                                        next:     'Sig.'
-                                    }
-                                },
-                     "search": "Filtrado por: _INPUT_ ",
-                },
-			});
-
-			var action = '<td> <div class="form-button-action"> <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Editar"> <i class="fa fa-edit"></i> </button> <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-danger" data-original-title="Eliminar"> <i class="fa fa-times"></i> </button> </div> </td>';
-
-			$('#addRowButton').click(function() {
-				$('#add-row').dataTable().fnAddData([
-					$("#addName").val(),
-					$("#addPosition").val(),
-					$("#addOffice").val(),
-					action
-					]);
-				$('#addRowModal').modal('hide');
-
-			});
-		});
-	</script>
+    {% include 'includes/scripts_js_datatable.html' %}
 {% endblock javascripts-page %}
