--- a/core/templates/monitor/editar.html
+++ b/core/templates/monitor/editar.html
@@ -1,153 +1,195 @@
 {% extends "layouts/base-modal.html" %}
 
-{% block title %} Cliente {% endblock title %}
+{% block title %} Monitor {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block modal-content-title-dissmiss %}
-onclick="javascript:window.location='/cliente/todos'"
+onclick="javascript:window.location='/monitor/todos'"
 {% endblock modal-content-title-dissmiss %}
 {% block modal-content-form-tag-begin %}
-<form method="POST" class="post-form" action="/cliente/actualizar/{{cliente.id}}/">
+<form method="POST" class="post-form" action="/monitor/actualizar/{{form.id.value}}/">
     {% endblock modal-content-form-tag-begin %}
-    {% block modal-content-title %} Cliente {% endblock modal-content-title %}
+    {% block modal-content-title %}
+    <ul class="ml-0 breadcrumbs">
+        <li class="nav-home">
+            <a href="#">
+                <i class="fas fa-tv"></i>
+            </a>
+        </li>
+        <li class="separator">
+            <i class="flaticon-right-arrow"></i>
+        </li>
+        <li class="nav-item">
+            <a href="#">Monitor</a>
+        </li>
+        <li class="separator">
+            <i class="flaticon-right-arrow"></i>
+        </li>
+        <li class="nav-item">
+            <a href="#">Agregar</a>
+        </li>
+    </ul>
+    {% endblock modal-content-title %}
     {% block modal-content %}
     {% csrf_token %}
 
+    <div class="card bg-custom-gray p-1">
+        <div class="card-header m-0 py-1">
+            <h5>Datos generales</h5>
+        </div>
+        <div class="card-body bg-light p-1">
+            <div class="form-row col-12">
+                <div class="form-group form-inline col-12 col-sm-4">
+                    <label class="col-form-label mr-3">Activo:</label>
+                    <input type="checkbox" name="monitor_estado"
+                           id="id_monitor_estado" class="form-control form-control-sm"
+                           value="True" {% if form.monitor_estado.value %}checked{% endif %} />
+                </div>
+                 <div class="form-group col-12 col-sm-8">
+                    <label class="col-form-label mr-3">Instalación:</label>
+                    <br>
+                    <select name="id_instalacion" required="" id="id_id_instalacion" class="form-control form-control-sm">
+                        {% for instalacion in form.id_instalacion %}
+                        {{ instalacion }}
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group col-12 col-sm-4">
+                    <label class="col-form-label col-form-label-sm">MAC WIFI:</label>
+                    <input type="text" name="mac_wifi"
+                                       maxlength="30" class="form-control form-control-sm" required
+                                       value=" {{form.mac_wifi.value }}"
+                                       id="id_mac_wifi"/>
+                </div>
+                <div class="form-group col-12 col-sm-4">
+                    <label class="col-form-label col-form-label-sm">Cámara Zona:</label>
+                    <input type="text" name="id_camara_zona"
+                                       maxlength="30" class="form-control form-control-sm"  required
+                                       value=" {{form.id_camara_zona.value }}"
+                                       id="id_id_camara_zona"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card bg-custom-gray p-1">
+        <div class="card-header m-0 py-1">
+            <h5>Configuración diseño</h5>
+        </div>
+        <div class="card-body bg-light p-1">
+            <div class="form-row col-12">
+                <div class="form-group col-12 col-sm-4 col-lg-2">
+                    <label class="col-form-label col-form-label-sm">Color barra cabecera:</label>
+                    <select class="form-control form-control-sm"  required name="color_barra_cabecera"
+                            id="id_color_barra_cabecera">
+                        <option value="WTH" selected>Blanco</option>
+                        <option value="G30">Gris 30</option>
+                        <option value="G60">Gris 60</option>
+                        <option value="BLK">Negro</option>
+                    </select>
+                </div>
+                <div class="form-group col-12 col-sm-8 col-lg-4">
+                    <label class="col-form-label col-form-label-sm">Imagén de fondo:</label>
+                    <!--input type="file" name="fondo_imagen"
+                                       class="form-control form-control-sm"
+                                       value=" {{form.fondo_imagen.value }}"
+                                       id="id_fondo_imagen"/-->
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input form-control-sm"
+                               name="fondo_imagen" id="id_fondo_imagen"
+                               value=" {{form.fondo_imagen.value }}" accept="image/*">
+                        <label class="custom-file-label col-form-label-sm" for="id_fondo_imagen">Elija un archivo</label>
+                    </div>
+                </div>
+                <div class="form-group col-12 col-sm-4 col-lg-2">
+                    <label class="col-form-label col-form-label-sm">Logotipo posición:</label>
+                    <select class="form-control form-control-sm"  required name="logotipo_posicion"
+                            id="id_logotipo_posicion" >
+                        <option value="CTR">Centro</option>
+                        <option value="RGT" >Derecha</option>
+                        <option value="LFT">Izquierda</option>
+                    </select>
+                </div>
+                <div class="form-group col-12 col-sm-8 col-lg-4">
+                    <label class="col-form-label col-form-label-sm">Logotipo:</label>
+                    <!--input type="file" name="logotipo" id="id_logotipo" accept="image/*"
+                           class="form-control form-control-sm"
+                           value=" {{form.logotipo.value }}" /-->
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input form-control-sm" name="logotipo"
+                               id="id_logotipo" value=" {{form.logotipo.value }}" accept="image/*">
+                        <label class="custom-file-label" for="id_logotipo">Elija un archivo</label>
+                    </div>
+                </div>
+                <div class="form-group col-12 col-sm-12 col-lg-4">
+                    <label class="col-form-label col-form-label-sm">Mostrar aforo en:</label>
+                    <select class="form-control form-control-sm"  required
+                            name="aforo_formato" id="id_aforo_formato">
+                        <option value="PCT">Porcentaje</option>
+                        <option value="RGT" selected>Número</option>
+                    </select>
+                </div>
+                <div class="form-group form-inline col-6 col-sm-6 col-lg-4">
+                    <label class="col-form-label mr-3">Mostrar aforo máximo:</label>
+                      <input type="checkbox"
+                               name="aforo_mostrar_maximo"
+                               maxlength="30" class="form-control form-control-sm"
+                               value="True" value="True" {% if form.aforo_mostrar_maximo.value %}checked{% endif %}
+                               id="id_aforo_mostrar_maximo"/>
+                </div>
+                <div class="form-group form-inline col-6 col-sm-6 col-lg-4">
+                    <label class="col-form-label mr-3">Mostrar aforo casi lleno:</label>
+                    <input type="checkbox"
+                           name="aforo_mostrar_casi_lleno"
+                           maxlength="30" class="form-control form-control-sm"
+                           value="True" {% if form.aforo_mostrar_casi_lleno.value %}checked{% endif %}
+                           id="id_aforo_mostrar_casi_lleno"/>
+                </div>
+                <div class="form-group col-12 col-lg-4">
+                    <label class="col-form-label">Frase Verde:</label>
+                    <input type="text"
+                           name="aforo_frase_verde"
+                           id="id-aforo_frase_verde"
+                           maxlength="300" class="form-control form-control-sm" required
+                           value=" {{form.aforo_frase_verde.value }}"/>
+                </div>
+                <div class="form-group col-12 col-lg-4">
+                    <label class="col-form-label">Frase Ambar:</label>
+                    <input type="text"
+                           name="aforo_frase_ambar"
+                           id="id-aforo_frase_ambar"
+                           maxlength="300" class="form-control form-control-sm" required
+                           value=" {{form.aforo_frase_ambar.value }}"/>
+                </div>
+                <div class="form-group col-12 col-lg-4">
+                    <label class="col-form-label">Frase Rojo:</label>
+                    <input type="text"
+                           name="aforo_frase_rojo"
+                           id="id-aforo_frase_rojo"
+                           maxlength="300" class="form-control form-control-sm" required
+                           value=" {{form.aforo_frase_rojo.value }}"/>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="form-row m-0 p-2">
-        <div class="form-group col-12 col-xs-5 col-sm-5 col-lg-3">
-            <label class="col-form-label col-form-label-sm">NIF:</label>
-            <input type="text" name="nif" id="id_nif" class="form-control form-control-sm" required maxlength="100"
-                   value="{{ cliente.nif }}"/>
-            <!--div class="alert alert-danger" hidden="true">
-                <strong>{{ cliente.nif.errores }}</strong>
-            </div-->
-        </div>
-        <div class="form-group col-12 col-xs-7 col-sm-7 col-lg-4">
-            <label class="col-form-label col-form-label-sm">Razón social:</label>
-            <input type="text" name="razon_social" id="id_razon_social" class="form-control form-control-sm" required
-                   maxlength="100"
-                   value="{{ cliente.razon_social }}"/>
-        </div>
-        <div class="form-group col-12 col-xs-12 col-sm-12 col-lg-5">
-            <label class="col-form-label col-form-label-sm">Dirección:</label>
-            <input type="text" name="direccion" id="id_direccion" class="form-control form-control-sm" required
-                   maxlength="255" value="{{ cliente.direccion }}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-4">
-            <label class="col-form-label col-form-label-sm">Población:</label>
-            <input type="text" name="poblacion" id="id_poblacion" class="form-control form-control-sm" required
-                   maxlength="100" value="{{cliente.poblacion}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-4">
-            <label class="col-form-label col-form-label-sm">Provincia:</label>
-            <input type="text" name="provincia" id="id_provincia" class="form-control form-control-sm" required
-                   maxlength="100" value="{{ cliente.provincia }}"/>
-        </div>
-        <div class="form-group col-12 col-sm-4 col-sm-4 col-lg-4">
-            <label class="col-form-label col-form-label-sm">Código Postal:</label>
-            <input type="text" name="codigo_postal" id="id_codigo_postal" class="form-control form-control-sm" required
-                   maxlength="100" value="{{ cliente.codigo_postal }}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-3">
-            <label class="col-form-label col-form-label-sm">Teléfono:</label>
-            <input type="text" name="telefono" id="id_telefono" class="form-control form-control-sm" required
-                   maxlength="100" value="{{ cliente.telefono }}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-3">
-            <label class="col-form-label col-form-label-sm">Movil:</label>
-            <input type="text" name="movil" id="id_movil" class="form-control form-control-sm" required
-                   maxlength="100" value="{{ cliente.movil }}"/>
-        </div>
-        <div class="form-group col-12 col-xs-12 col-sm-12 col-lg-6">
-            <label class="col-form-label col-form-label-sm">e-mail:</label>
-            <input type="text" name="email" id="id_email" class="form-control form-control-sm" required
-                   maxlength="100" value="{{ cliente.email }}"/>
-        </div>
         <div class="form-group col-12">
-            <label class="col-form-label">Administración:</label>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-4 col-lg-3">
-            <label class="col-form-label">Nombre:</label>
-            <input type="text" name="administracion_nombre" id="id_administracion_nombre" class="form-control" required
-                   maxlength="100" value="{{ cliente.administracion_nombre}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-4 col-lg-3">
-            <label class="col-form-label">Cargo :</label>
-            <input type="text" name="administracion_cargo" id="id_administracion_cargo" class="form-control" required
-                   maxlength="100" value="{{ cliente.administracion_cargo}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-12 col-sm-6 col-lg-6">
-            <label class="col-form-label">e-mail:</label>
-            <input type="text" name="administracion_email" id="id_administracion_email" class="form-control" required
-                   maxlength="100" value="{{ cliente.administracion_email}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-4 col-lg-3">
-            <label class="col-form-label">Teléfono:</label>
-            <input type="text" name="administracion_telefono" id="id_administracion_telefono" class="form-control"
-                   required
-                   maxlength="100" value="{{ cliente.administracion_telefono}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-4 col-lg-3">
-            <label class="col-form-label">Movil:</label>
-            <input type="text" name="administracion_movil" id="id_administracion_movil" class="form-control" required
-                   maxlength="100" value="{{ cliente.administracion_movil}}"/>
-        </div>
-        <div class="form-group col-12">
-            <label class="col-form-label">Técnico:</label>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-3">
-            <label class="col-form-label">Nombre:</label>
-            <input type="text" name="tecnico_nombre" id="id_tecnico_nombre" class="form-control" required
-                   maxlength="100" value="{{ cliente.tecnico_nombre}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-3">
-            <label class="col-form-label">Cargo :</label>
-            <input type="text" name="tecnico_cargo" id="id_tecnico_cargo" class="form-control" required
-                   maxlength="100" value="{{ cliente.tecnico_cargo}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-12 col-sm-6 col-lg-6">
-            <label class="col-form-label">e-mail:</label>
-            <input type="text" name="tecnico_email" id="id_tecnico_email" class="form-control" required
-                   maxlength="100" value="{{ cliente.tecnico_email}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-3">
-            <label class="col-form-label">Teléfono:</label>
-            <input type="text" name="tecnico_telefono" id="id_tecnico_telefono" class="form-control" required
-                   maxlength="100" value="{{ cliente.tecnico_telefono}}"/>
-        </div>
-        <div class="form-group col-12 col-xs-6 col-sm-6 col-lg-3">
-            <label class="col-form-label">Movil:</label>
-            <input type="text" name="tecnico_movil" id="id_tecnico_movil" class="form-control" required
-                   maxlength="100" value="{{ cliente.tecnico_movil}}"/>
-        </div>
-
-        <div class="form-group form-inline col-12">
-            <label class="col-form-label mr-3">Estado:</label>
-            <input type="checkbox" name="estado" id="id_estado" class="form-control" required
-                   value="{{ cliente.estado }}"/>
-        </div>
-        <div class="form-group bg-prmary col-12">
-            {% if cliente.errors %}
+            {% if form.errors %}
             <div class="alert alert-danger my-1">
-                {% for field in cliente %}
+            {% for field in form %}
                 {% if field.errors %}
-                <strong class="mr-3">{{ field.name | capfirst }}: </strong>
-                <br>
-                {% for error in field.errors %}
-                * <strong> {{ error|escape }}</strong>
-                {% endfor %}
-                <br>
+                    <li>
+                        <strong class="mr-3">{{ field.label | capfirst }}: </strong>
+                        <ul class="errorlist">
+                            {% for error in field.errors %}
+                            <li>{{error|escape}}</li>
+                            {% endfor %}
+                        </ul>
+                    </li>
                 {% endif %}
-                {% endfor %}
-            </div>
-            {% for error in cliente.non_field_errors %}
-            <div class="alert alert-danger">
-                * {{field.name}} <strong>{{ error|escape }}</strong>
-                <br>
-            </div>
             {% endfor %}
+            </div>
             {% endif %}
         </div>
     </div>
@@ -156,11 +198,19 @@ onclick="javascript:window.location='/cliente/todos'"
     <button type="submit" class="btn btn-success">Guardar</button>
     <button type="reset" class="btn btn-warning" data-dismiss="modal">Cancelar</button>
     <button type="button" class="btn btn-danger" data-dismiss="modal"
-            onclick="javascript:window.location='/cliente/todos'">Cerrar
+            onclick="javascript:window.location='/monitor/todos'">Cerrar
     </button>
     {% endblock modal-content-footer %}
-    {% block modal-content-form-tag-end %}
+{% block modal-content-form-tag-end %}
 </form>
 {% endblock modal-content-form-tag-end %}
 <!-- Specific JS goes HERE -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+//Permite que el nobe del archivo se muestre en la caja de texto del fileUpload
+$(".custom-file-input").on("change", function() {
+  var fileName = $(this).val().split("\\").pop();
+  $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+});
+</script>
+{% endblock javascripts %}
