--- a/core/templates/monitor/todos.html
+++ b/core/templates/monitor/todos.html
@@ -1,23 +1,23 @@
 {% extends "layouts/base-form.html" %}
 
-{% block title %} Monitor {% endblock title %}
+{% block title %} Cliente {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
 
-{% block content-form-page-header-title %} Monitores {% endblock content-form-page-header-title %}
+{% block content-form-page-header-title %} Monitor {% endblock content-form-page-header-title %}
 {% block content-form-page-header %}
     <ul class="breadcrumbs">
         <li class="nav-home">
             <a href="#">
-                <i class="fas fa-home"></i>
+                <i class="fas fa-tv"></i>
             </a>
         </li>
         <li class="separator">
             <i class="flaticon-right-arrow"></i>
         </li>
         <li class="nav-item">
-            <a href="#">Monitores</a>
+            <a href="#">Monitor</a>
         </li>
         <li class="separator">
             <i class="flaticon-right-arrow"></i>
@@ -29,72 +29,76 @@
 {% endblock content-form-page-header %}
 {% block content-form-form-tag-begin %} {% endblock content-form-form-tag-begin %}
 {% block content-form-content %}
-    <div class="card-header">
+    <div class="card-header m-0 p-2">
         <div class="d-flex align-items-center">
             <h4 class="card-title"></h4>
-            <a href="/monitor/" role="button"
-               class="btn btn-primary btn-round ml-auto">
-                <i class="fa fa-plus" title="Agregar"></i>Agregar
+            <a href="/monitor/agregar" role="button"
+               class="btn btn-primary ml-auto">
+                <i class="fa fa-plus mr-2" title="Agregar"></i>Agregar
             </a>
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive w-100">
-            <table id="add-row" class="display table table-striped table-hover">
+        <div class="table-responsive m-0 p-0 py-3 w-100">
+            <!--table id="add-row" class="display table table-striped table-hover table-bordered table-head-bg-primary table-bordered-bd-primary"-->
+            <table id="add-row" class="display table table-striped table-hover table-head-bg-primary ">
                 <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>NIF</th>
-                    <th>Razón social</th>
-                    <th>Dirección</th>
-                    <th>Problación</th>
-                    <th>Provincia</th>
-                    <th>Código Postal</th>
-                    <th>Teléfono</th>
-                    <th>Móvil</th>
-                    <th>e-mail</th>
+                    <th class="text-center"></th>
+                    <th>MAC Wi-Fi</th>
+                    <th>Cámara</th>
+                    <th>Zona</th>
+                    <th>Descripción</th>
                     <th>Estado</th>
-                    <th style="width: 10%"></th>
+                    <th class="text-center"></th>
                 </tr>
                 </thead>
-                <tfoot>
+                <!--tfoot>
                 <tr>
-                    <th>ID</th>
-                    <th>NIF</th>
-                    <th>Razón social</th>
-                    <th>Dirección</th>
-                    <th>Problación</th>
-                    <th>Provincia</th>
-                    <th>Código Postal</th>
-                    <th>Teléfono</th>
-                    <th>Móvil</th>
-                    <th>e-mail</th>
+                    <th class="text-center"></th>
+                    <th>MAC Wi-Fi</th>
+                    <th>Cámara</th>
+                    <th>Zona</th>
+                    <th>Descripción</th>
                     <th>Estado</th>
-                    <th></th>
+                    <th class="text-center"></th>
                 </tr>
-                </tfoot>
+                </tfoot-->
                 <tbody>
-                {% for monitor in monitores %}
+                {% for monitor in form %}
+
+
+
                 <tr>
-                    <td>{{ monitor.id }}</td>
-                    <td>{{ monitor.nif }}</td>
-                    <td>{{ monitor.razon_social }}</td>
-                    <td>{{ monitor.direccion }}</td>
-                    <td>{{ monitor.poblacion }}</td>
-                    <td>{{ monitor.provincia }}</td>
-                    <td>{{ monitor.codigo_postal }}</td>
-                    <td>{{ monitor.telefono }}</td>
-                    <td>{{ monitor.movil }}</td>
-                    <td>{{ monitor.email }}</td>
-                    <td>{{ monitor.estado }}</td>
                     <td>
-                        <div class="form-button-action">
+                        <div class="form-button-action m-0 p-0">
                             <a href="/monitor/editar/{{ monitor.id }}" role="button"
-                               class="btn btn-link btn-primary btn-lg">
+                               class="btn btn-link btn-primary btn-sm">
                                 <span class="fa fa-edit" title="Editar"></span>
                             </a>
                             <a href="/monitor/eliminar/{{ monitor.id }}" role="button"
-                               class="btn btn-link btn-danger">
+                               class="btn btn-link btn-danger btn-sm">
+                                <span class="fa fa-times" title="Eliminar"></span>
+                            </a>
+                        </div>
+                    </td>
+                    <td>{{ monitor.mac_wifi }}</td>
+                    <td>{{ monitor.camara_serial }}</td>
+                    <td>{{ monitor.zona_numero }}</td>
+                    <td>{{ monitor.descripcion }}</td>
+                    <td class="text-center">
+                        {% if monitor.monitor_estado %}<i class="fa fa-check-square text-success"></i>
+                        {% else %}<i class="fa fa-times text-danger"></i>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <div class="form-button-action m-0 p-0">
+                            <a href="/monitor/editar/{{ monitor.id }}" role="button"
+                               class="btn btn-link btn-primary btn-sm">
+                                <span class="fa fa-edit" title="Editar"></span>
+                            </a>
+                            <a href="/monitor/eliminar/{{ monitor.id }}" role="button"
+                               class="btn btn-link btn-danger btn-sm">
                                 <span class="fa fa-times" title="Eliminar"></span>
                             </a>
                         </div>
@@ -112,25 +116,5 @@
 <!-- Specific JS goes HERE -->
 {% block javascripts %}{% endblock javascripts %}
 {% block javascripts-page %}
-	<script >
-		$(document).ready(function() {
-			// Add Row
-			$('#add-row').DataTable({
-				"pageLength": 5,
-			});
-
-			var action = '<td> <div class="form-button-action"> <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Edit Task"> <i class="fa fa-edit"></i> </button> <button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-danger" data-original-title="Remove"> <i class="fa fa-times"></i> </button> </div> </td>';
-
-			$('#addRowButton').click(function() {
-				$('#add-row').dataTable().fnAddData([
-					$("#addName").val(),
-					$("#addPosition").val(),
-					$("#addOffice").val(),
-					action
-					]);
-				$('#addRowModal').modal('hide');
-
-			});
-		});
-	</script>
+    {% include 'includes/scripts_js_datatable.html' %}
 {% endblock javascripts-page %}
